WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270073
[UnifiedPDF] Selections are broken in rotated pages
https://bugs.webkit.org/show_bug.cgi?id=270073
Summary
[UnifiedPDF] Selections are broken in rotated pages
Abrar Rahman Protyasha
Reported
2024-02-26 02:02:53 PST
The `-[PDFSelection drawForPage:withBox:active:inContext:]` API expects that the context to paint in has already been transformed for the display box to be presented in. This goes the behavior of `-[PDFPage drawWithBox:toContext:]`, which means our assumption was wrong. Let's fix that.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-26 02:03:02 PST
<
rdar://problem/123621642
>
Abrar Rahman Protyasha
Comment 2
2024-02-26 02:35:04 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25096
EWS
Comment 3
2024-02-26 16:27:28 PST
Committed
275351@main
(099c347a91fc): <
https://commits.webkit.org/275351@main
> Reviewed commits have been landed. Closing PR #25096 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug