[UnifiedPDF] Selections are broken in rotated pages https://bugs.webkit.org/show_bug.cgi?id=270073 rdar://123621642

Reviewed by Simon Fraser.

The `-[PDFPage drawWithBox:toContext:]` method accounts for page
rotation, and we took this behavior to assume that the PDFSelection
drawing API would behave similarly. Unfortunately, this is wrong, and
said method expects callers to apply the transform corresponding to
the appropriate boundary box type.

This patch amends this situation by manually applying the transform in
question to the context's CTM while we have a selection painted into
that context.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/PDFDocumentLayout.h:

Expose `toPageTransform` and `geometryForPage` publicly.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/PDFDocumentLayout.mm:
(WebKit::PDFDocumentLayout::geometryForPage const):
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::paintPDFContent):

Canonical link: https://commits.webkit.org/275351@main